...
                        .fillMaxWidth()
                        .padding(horizontal = 24.dp, vertical = 16.dp),
                    horizontalArrangement = Arrangement.SpaceBetween,
                    verticalAlignment = Alignment.CenterVertically,
                ) {
                    Text(
                        text = "添加数据库连接",
                        style = MaterialTheme.typography.titleLarge,
                    )
                    WinTextButton(onClick = onDismiss, shape = SundaysPalette.buttonShape) { Text("关闭") }
                }

                WinDivider(color = MaterialTheme.colorScheme.outlineVariant)
...
